<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_startstop" android:title="@string/action_startstop"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear" android:title="@string/action_clear"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_info" android:title="@string/action_info"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_x" android:title="@string/action_show_x"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_y" android:title="@string/action_show_y"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_z" android:title="@string/action_show_z"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_result" android:title="@string/action_show_result"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
          android:orderInCategory="100" app:showAsAction="never" />
</menu>
